--- a/site/index.html
+++ b/site/index.html
@@ -1,3 +1,32 @@
-<div>
-    Hello Didier
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            background-color: #33c3d3;
+        }
+        div {        background-color: white;
+    /* font-family: arial; */
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 95px;
+    vertical-align: middle;
+    text-align: center;
+    color: #33c2d3;
+    letter-spacing: 0.5rem;
+    font-weight: 00;
+    border-left: 6px solid;
+    border-right: 6px solid;
+    margin: 120px 85px;
+    border-radius: 0.4em;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        Hello Didier
+    </div>
+</body>
+</html>
