--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-            background-color: #33c3d3;
+            background-color: #33c3d328;
         }
         div {        background-color: white;
     /* font-family: arial; */
